[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-gossip = "2.0.14"
solana-sdk = "2.0.14"
solana-streamer = "2.0.14"
solana-bloom = "2.0.14"
serde = "1.0.213"
bincode = "1.3.3"
tokio = "1.41.0"
chrono = "0.4"